add MessageAdapter.kt; add first implementation of SecuredDataStore and objects Encryption/Decryption; update dependencies

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -9,6 +9,9 @@
             name="dialog"
             type="com.nagl.debchat.data.model.Dialog" />
 
+        <variable
+            name="userToken"
+            type="com.nagl.debchat.data.model.UserToken" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
